--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 <tt> </tt> 
 
 
-</p>
+
+</p>
 <table class="imgtable"><tr><td>
 <img src="pic/ZZ.jpg" alt="alt text" width="384px" height="296px" />&nbsp;</td>
 <td align="left"><p>Zhihui Zhu<br />
@@ -44,7 +45,8 @@ Denver CO 80208, USA<br />
 
 <br />
 Phone: (303) 871-5249<br />
-Email: zhihui.zhu@du.edu</p>
+Email: zhihui.zhu@du.edu
+</p>
 </td></tr></table>
 <p>(Photo by SL, at Maroon Bells Aspen, September 2016)<br />
 
@@ -58,90 +60,120 @@ I am an Assistant Professor with the Department of Electrical and Computer Engin
 
 
 
-</p>
-<h2>News:</h2>
-<p></p>
+
+</p>
+<h2>News:
+</h2>
+<p>
+</p>
 <ul>
 <li><p>[Dec 2021] Invited to serve as Action Editor at the <a href="https://jmlr.org/tmlr/" target=&ldquo;blank&rdquo;>Transactions on Machine Learning Research</a>.
-</p>
+
+</p>
 </li>
 <li><p>[Nov 2021] Co-organizing the 2nd workshop on &lsquo;&lsquo;<a href="https://sites.google.com/view/slowdnn2021/" target=&ldquo;blank&rdquo;>Seeking Low-dimensionality in Deep Neural Networks (SLowDNN)</a>&rsquo;&rsquo;, Nov. 22nd – Nov. 23rd, 2021.
-</p>
+
+</p>
 </li>
 <li><p>[Oct 2021] Four papers accetped to <a href="https://nips.cc/" target=&ldquo;blank&rdquo;>NeurIPS 2021</a>. 
-</p>
+
+</p>
 </li>
 <li><p>[May 2021] One ICML&rsquo;21 on robust subspace learned accepted. New <a href="https://arxiv.org/abs/2105.02375" target=&ldquo;blank&rdquo;>paper</a> released on understanding the behabior of the classifiers in monder deep neural networks.
-</p>
+
+</p>
 </li>
 <li><p>[May 2021] Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2106881&amp;HistoricalAwards=false" target=&ldquo;blank&rdquo;>collaborative proposal</a> (with Mike and Gongguo at CSM) on Structured Inference and Adaptive Measurement Design has been awarded by NSF!
-</p>
+
+</p>
 </li>
 <li><p>[March 2021] Invited to serve as a TPC member (area chair) at NeurIPS 2021.
-</p>
+
+</p>
 </li>
 <li><p>[March 2021] Invited <a href="https://www.dropbox.com/s/lsvxde2msteh9mx/Robust_recovery.pdf?dl=0" target=&ldquo;blank&rdquo;>talk</a> at Microsoft. One paper on <a href="https://arxiv.org/abs/2103.00673" target=&ldquo;blank&rdquo;>Convolutional Normalization</a> is on arxiv. One CVPR&rsquo;21 on <a href="https://arxiv.org/abs/2103.10559" target=&ldquo;blank&rdquo;>frame interpolation</a> and one AISTATS&rsquo;21 on hyperplane clustering accepted.
-</p>
+
+</p>
 </li>
 <li><p>[Nov 2020] Co-organizing IEEE workshop on &lsquo;&lsquo;<a href="https://sites.google.com/view/slowdnn/" target=&ldquo;blank&rdquo;>Seeking Low-dimensionality in Deep Neural Networks (SLowDNN)</a>&rsquo;&rsquo;, Nov. 23rd – Nov. 24th, 2020.
-</p>
+
+</p>
 </li>
 <li><p>[Sep 2020] Our <a href="https://arxiv.org/pdf/2006.08857.pdf" target=&ldquo;blank&rdquo;>paper</a> has been accepted at NeurIPS as spotlight (top 4%), which characterizes implicit bias with discrepant learning rates and builds connections between over-parameterization, RPCA, and deep neural networks.
-</p>
+
+</p>
 </li>
 <li><p>[Jun 2020] Our proposal (with <a href="https://sites.google.com/view/jsulam/about" target=&ldquo;blank&rdquo;>Jere</a> at JHU) &lsquo;&lsquo;Collaborative Research: CIF: Small: Deep Sparse Models: Analysis and Algorithms&rsquo;&rsquo; has been awarded by NSF!
-</p>
+
+</p>
 </li>
 <li><p>[Jun 2020] Two papers about over-parameterization are on arXiv: <a href="https://arxiv.org/pdf/2006.06179.pdf" target=&ldquo;blank&rdquo;>one</a> studies the benefit of over-realized model in dictionary learning, <a href="https://arxiv.org/pdf/2006.08857.pdf" target=&ldquo;blank&rdquo;>another one</a> characterizes implicit bias with discrepant learning rates and builds connection between over-parameterization, RPCA, and deep neural networks.
-</p>
+
+</p>
 </li>
 <li><p>[Feb 2020] Our paper on robust homography estimation has been accepted to <a href="http://cvpr2020.thecvf.com/" target=&ldquo;blank&rdquo;>CVPR 2020</a>.
-</p>
+
+</p>
 </li>
 <li><p>[Jan 2020] Co-organized with Qing and Shuyang, our two-session mini-symposium &lsquo;&lsquo;Recent Advances in Optimization Methods for Signal Processing and Machine Learning&rsquo;&rsquo; has been accepted by the inaugural <i><a href="https://www.siam.org/conferences/cm/conference/mds20" target=&ldquo;blank&rdquo;>SIAM Conference on Mathematics of Data Science</a></i>. See you at Cincinnati, Ohio in May!
-</p>
+
+</p>
 </li>
 <li><p>[Jan 2020] Our review paper (with Qing, Xiao, Manolis, John, and Rene) &lsquo;&lsquo;<a href="https://arxiv.org/abs/2001.06970" target=&ldquo;blank&rdquo;>Finding the Sparsest Vectors in a Subspace: Theory, Algorithms, and Applications</a>&rsquo;&rsquo; is on arxiv.
-</p>
+
+</p>
 </li>
 <li><p>[Jan 2020] Invited talk at <a href="https://sites.google.com/colorado.edu/statoptml/" target=&ldquo;blank&rdquo;>Statistics, Optimization and Machine Learning Seminar</a>, University of Colorado Boulder.
-</p>
+
+</p>
 </li>
 <li><p>[Jan 2020] Invited talk at Colorado School of Mines.
-</p>
+
+</p>
 </li>
 <li><p>[Dec 2019 ] Our paper <a href="https://arxiv.org/abs/1809.09237" target=&ldquo;blank&rdquo;>Nonconvex Robust Low-rank Matrix Recovery</a> has been accepted by <i>SIAM Journal on Optimization</i>.
-</p>
+
+</p>
 </li>
 <li><p>[Dec 2019 ] Our paper <a href="https://openreview.net/forum?id=rygixkHKDH" target=&ldquo;blank&rdquo;>Analysis of the Optimization Landscapes for Overcomplete Representation Learning</a> was accepted to <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;>ICLR 2020</a> and was selected for <font color=red ><b>oral</b></font> presentation. In this paper, we showed benign optimization landscapes for learning overcomplete/convolutional dictionaries, ensuring simple gradient descent find the targeted solutions.
-</p>
+
+</p>
 </li>
 <li><p>[Dec 2019 ] Attended <a href="https://nips.cc/" target=&ldquo;blank&rdquo;>NeurIPS 2019</a> and presented 3 papers. 
-</p>
+
+</p>
 </li>
 <li><p>[Dec 2019] Invited talk at <a href="http://www.inspirelab.us/seminars/" target=&ldquo;blank&rdquo;>Signal and Information Processing Seminar</a>, Rutgers University.
-</p>
+
+</p>
 </li>
 <li><p>[Nov 2019] Our paper (with Xiao, Shixiang, Zengde, Qing, and Anthony) &lsquo;&lsquo;<a href="https://arxiv.org/abs/1911.05047" target=&ldquo;blank&rdquo;>Nonsmooth Optimization over Stiefel Manifold: Riemannian Subgradient Methods</a>&rsquo;&rsquo; is on arxiv. This work provides (first) explicit convergence rate guarantees for a family of Riemannian subgradient methods when used to optimize nonsmooth functions (that are weakly convex in the Euclidean space) over then Stiefel manifold.
-</p>
+
+</p>
 </li>
 <li><p>[Oct 2019] Attended the Northrop Grumman University Research Symposium, and presented our work on &lsquo;&lsquo;Object Identification with Less Supervision".
-</p>
+
+</p>
 </li>
 <li><p>[Oct 2019] Attended the <a href="https://ima.umn.edu/2019-2020/SW10.14-18.19" target=&ldquo;blank&rdquo;>Computational Imaging</a> workshop at IMA, University of Minnesota, and presented our work on &lsquo;&lsquo;A Linearly Convergent Method for Non-smooth Non-convex Optimization on Grassmannian with Applications to Robust Subspace and Dictionary Learning&rsquo;&rsquo;.
-</p>
+
+</p>
 </li>
 <li><p>[Sep 2019] Gave an invited talk on <a href="talks/LARM-Sep19-Zhu.pdf" target=&ldquo;blank&rdquo;>Provable Nonconvex Approaches for Low-rank Models</a> at <a href="https://sites.google.com/site/lowrankmodels/" target=&ldquo;blank&rdquo;>Workshop on Low-Rank Models and Applications (LRMA)</a>, University of Mons, Belgium, Sep 12 – 13, 2019. 
-</p>
+
+</p>
 </li>
 <li><p>[Sep 2019] 3 papers accepted to <a href="https://nips.cc/" target=&ldquo;blank&rdquo;>NeurIPS 2019</a>.
-</p>
+
+</p>
 </li>
 <li><p>[Aug 2019] Gave an invited talk at <a href="https://iccopt2019.berlin/" target=&ldquo;blank&rdquo;>ICCOPT 2019, the Sixth International Conference on Continuous Optimization</a>, Technical University (TU) of Berlin, Aug 3 – 8, 2019.
-</p>
+
+</p>
 </li>
 <li><p>[Aug 2019] Our paper (with Xiao, Anthony, Jason) &lsquo;&lsquo;<a href="https://arxiv.org/pdf/1907.11687.pdf" target=&ldquo;blank&rdquo;>Incremental Methods for Weakly Convex Optimization</a>&rsquo;&rsquo; is on arxiv. This work provides (first) convergence guarantee for incrememtal algorithms and their random shuffling version (including the incremental subgradient method which is the work-horse of deep learning) in solving weakly convex optimization problems which could be nonconvex and nonsmooth.
-</p>
+
+</p>
 </li>
 <li><p>[Aug 2019] Our paper (with Qing, Xiao) &lsquo;&lsquo;<a href="https://arxiv.org/pdf/1908.10776.pdf" target=&ldquo;blank&rdquo;>A Nonconvex Approach for Exact and Efficient Multichannel Sparse Blind Deconvolution</a>&rsquo;&rsquo; is on arxiv. This work considers multichannel sparse blind deconvolution problem and provides efficient first-order methods that can exactly solve this blind deconvolution problem in a linear rate.
 
@@ -160,7 +192,8 @@ I am an Assistant Professor with the Department of Electrical and Computer Engin
 
 
 
-</p>
+
+</p>
 </li>
 </ul>
 <div id="footer">
@@ -173,3 +206,4 @@ Page generated 2022-01-15 09:00:00 MST, by <a href="https://github.com/wsshin/je
 </table>
 </body>
 </html>
+
