--- a/People.html
+++ b/People.html
@@ -18,87 +18,112 @@
 <div class="menu-item"><a href="People.html" class="current">People</a></div>
 <div class="menu-item"><a href="Talks.html">Talks</a></div>
 <div class="menu-item"><a href="Software.html">Software</a></div>
-<div class="menu-item"><a href="Openings.html">Openings</a></div>
 <div class="menu-item"><a href="zhuCV.pdf">CV</a></div>
 </td>
 <td id="layout-content">
-<p>
-<tt> </tt> 
-</p>
+<p><tt> </tt> </p>
 <h1>Research Group</h1>
-<p></p>
-<h2>Funded graduate students</h2>
+<h2>Current Members</h2>
+<h3>PhD Students</h3>
 <table class="imgtable"><tr><td>
 <img src="pic/group/jinxin.png" alt="alt text" width="150px" height="180px" />&nbsp;</td>
-<td align="left"><p>Jinxin Zhou<br />
-
-<br />
-MS, UMich; BS, HUST</p>
+<td align="left"><p>Jinxin Zhou<br /></p>
+<p>MS, UMich; BS, HUST<br /></p>
+<ul>
+<li><p>Jinxin Zhou*, Xiao Li*, Tianyu Ding, Chong You, Qing Qu, and Zhihui Zhu, “<a href="https://proceedings.mlr.press/v162/zhou22c/zhou22c.pdf">On the Optimization
+Landscape of Neural Collapse under MSE Loss: Global Optimality with Unconstrained
+Features</a>,” <i>International Conference in Machine Learning (ICML)</i>, 2022. (acceptance
+rate = 20%)</p>
+</li>
+</ul>
+<ul>
+<li><p>Z. Zhu*, T. Ding*, J. Zhou, X. Li, C. You, J. Sulam, and Q. Qu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2105.02375">A Geometric Analysis of Neural Collapse with Unconstrained Features</a>," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2021. (<font color=red ><b>spotlight, top 3% </b></font>; acceptance rate = 26%)</p>
+</li>
+</ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="pic/group/zhen.png" alt="alt text" width="150px" height="180px" />&nbsp;</td>
-<td align="left"><p>Zhen Qin<br />
-
-<br />
-MS, SEU; BS, LDU</p>
+<td align="left"><p>Zhen Qin<br /></p>
+<p>MS, SEU; BS, LDU<br /></p>
+<ul>
+<li><p>Z. Qin, A. Lidiak, Z. Gong, G. Tang, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2207.04327">Error Analysis of Tensor-Train Cross Approximation</a>,", preprint, 2022.</p>
+</li>
+</ul>
+<ul>
+<li><p>A. Lidiak, C. Jameson, Z. Qin, G. Tang, M. B. Wakin, Z. Zhu, and Z. Gong, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2207.06397">Quantum state tomography with tensor train cross approximation</a>,", preprint, 2022.</p>
+</li>
+</ul>
+<ul>
+<li><p>H. Yu, Z. Qin, and Z. Zhu, “<a href="https://ieeexplore.ieee.org/document/9747165">Learning Approach for Fast Approximate Matrix Factorizations</a>,” <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, 2022.</p>
+</li>
+</ul>
 </td></tr></table>
-<p></p>
+<h2>Former Members</h2>
+<h3>Former Master Students</h3>
 <table class="imgtable"><tr><td>
 <img src="pic/group/haiyan.png" alt="alt text" width="150px" height="150px" />&nbsp;</td>
-<td align="left"><p>Haiyan Yu<br />
-
-<br />
-MS, HUFT; BS, AHNU</p>
-</td></tr></table>
-<p>
-</p>
-<h2>Research Collaborators</h2>
-<p></p>
+<td align="left"><p>Haiyan Yu<br /></p>
 <ul>
-<li><p><a href="https://www.tianyuding.com/" target=&ldquo;blank&rdquo;>Tianyu Ding</a> (JHU, Applied Math)
-</p>
+<li><p>H. Yu, Z. Qin, and Z. Zhu, “<a href="https://ieeexplore.ieee.org/document/9747165">Learning Approach for Fast Approximate Matrix Factorizations</a>,” <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, 2022.</p>
 </li>
-<li><p><a href="https://www.math.ucla.edu/~qiuweili/" target=&ldquo;blank&rdquo;>Qiuwei Li</a> (UCLA, Applied Math)
-</p>
+</ul>
+</td></tr></table>
+<h2>Research Collaborators</h2>
+<ul>
+<li><p><a href="https://www.tianyuding.com/">Tianyu Ding</a> (JHU, Applied Math)</p>
 </li>
-<li><p><a href="https://www.math.ucla.edu/~shuangli/" target=&ldquo;blank&rdquo;>Shuang Li</a> (UCLA, Applied Math)
-</p>
+</ul>
+<ul>
+<li><p><a href="https://www.math.ucla.edu/~qiuweili/">Qiuwei Li</a> (UCLA, Applied Math)</p>
 </li>
-<li><p><a href="https://sites.google.com/view/jsulam" target=&ldquo;blank&rdquo;>Jeremias Sulam</a> (JHU, BME)
-</p>
+</ul>
+<ul>
+<li><p><a href="https://www.math.ucla.edu/~shuangli/">Shuang Li</a> (UCLA, Applied Math)</p>
 </li>
-<li><p><a href="https://sites.google.com/view/xli" target=&ldquo;blank&rdquo;>Xiao Li</a> (CUHK, Data Science)
-
-</p>
+</ul>
+<ul>
+<li><p><a href="https://sites.google.com/view/jsulam">Jeremias Sulam</a> (JHU, BME)</p>
 </li>
-<li><p><a href="https://qingqu.engin.umich.edu/" target=&ldquo;blank&rdquo;>Qing Qu</a> (UMich, EECS)
-</p>
+</ul>
+<ul>
+<li><p><a href="https://sites.google.com/view/xli">Xiao Li</a> (CUHK, Data Science)</p>
 </li>
-<li><p><a href="https://coral.ise.lehigh.edu/danielprobinson/" target=&ldquo;blank&rdquo;>Daniel Robinson</a> (Lehigh, ISE)
-</p>
+</ul>
+<ul>
+<li><p><a href="https://qingqu.engin.umich.edu/">Qing Qu</a> (UMich, EECS)</p>
 </li>
-<li><p><a href="http://www1.se.cuhk.edu.hk/~manchoso/" target=&ldquo;blank&rdquo;>Anthony Man-Cho So</a> (CUHK, SEEM)
-</p>
+</ul>
+<ul>
+<li><p><a href="https://coral.ise.lehigh.edu/danielprobinson/">Daniel Robinson</a> (Lehigh, ISE)</p>
 </li>
-<li><p><a href="http://inside.mines.edu/~gtang/" target=&ldquo;blank&rdquo;>Gongguo Tang</a> (CSM, ECE)
-</p>
+</ul>
+<ul>
+<li><p><a href="http://www1.se.cuhk.edu.hk/~manchoso/">Anthony Man-Cho So</a> (CUHK, SEEM)</p>
 </li>
-<li><p><a href="http://inside.mines.edu/~mwakin/" target=&ldquo;blank&rdquo;>Michael Wakin</a> (CSM, ECE)
-</p>
+</ul>
+<ul>
+<li><p><a href="http://inside.mines.edu/~gtang/">Gongguo Tang</a> (CSM, ECE)</p>
 </li>
-<li><p><a href="http://cig.ustc.edu.cn/people/list.htm" target=&ldquo;blank&rdquo;>Xingming Wu</a> (USTC, Geophysics)
-</p>
+</ul>
+<ul>
+<li><p><a href="http://inside.mines.edu/~mwakin/">Michael Wakin</a> (CSM, ECE)</p>
 </li>
-<li><p><a href="https://sites.google.com/view/cyou" target=&ldquo;blank&rdquo;>Chong You</a> (UC Berkeley, EECS)
-</p>
+</ul>
+<ul>
+<li><p><a href="http://cig.ustc.edu.cn/people/list.htm">Xinming Wu</a> (USTC, Geophysics)</p>
 </li>
-<li><p><a href="http://cis.jhu.edu/~rvidal/" target=&ldquo;blank&rdquo;>Rene Vidal</a> (JHU, BME)
-</p>
+</ul>
+<ul>
+<li><p><a href="https://sites.google.com/view/cyou">Chong You</a> (UC Berkeley, EECS)</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="http://cis.jhu.edu/~rvidal/">Rene Vidal</a> (JHU, BME)</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-12 18:28:10 MST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-09-03 16:32:20 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
