--- a/Software.html
+++ b/Software.html
@@ -18,107 +18,81 @@
 <div class="menu-item"><a href="People.html">People</a></div>
 <div class="menu-item"><a href="Talks.html">Talks</a></div>
 <div class="menu-item"><a href="Software.html" class="current">Software</a></div>
-<div class="menu-item"><a href="Openings.html">Openings</a></div>
 <div class="menu-item"><a href="zhuCV.pdf">CV</a></div>
 </td>
 <td id="layout-content">
-<p><tt> </tt> 
-
-</p>
+<p><tt> </tt> </p>
 <table class="imgtable"><tr><td>
 <img src="pic/colorfulCO.jpg" alt="alt text" width="1184px" height="309px" />&nbsp;</td>
 <td align="left"></td></tr></table>
-<p>(Kenosha Pass, September 2017 (Colorful CO))<br />
-
-
-</p>
+<p>(Kenosha Pass, September 2017 (Colorful CO))<br /></p>
 <h2>Dual Principal Component Pursuit</h2>
 <table class="imgtable"><tr><td>
-<img src="code/dpcp.png" alt="alt text" width="256px" height="166px" />&nbsp;</td>
-<td align="left"><p>This software package contains a collection of tools for the Dual Principal Component Pursuit (DPCP) method that robustly fits a subspace to data contaminated with outliers.
-
-For more information, see &ldquo;<a href="http://papers.nips.cc/paper/7486-dual-principal-component-pursuit-improved-analysis-and-efficient-algorithms.pdf" target=&rdquo;blank&ldquo;>Dual Principal Component Pursuit: Improved Analysis and Efficient Algorithms</a>,&rdquo; by Z. Zhu, Y. Wang, D. P. Robinson, D. Naiman, R. Vidal, and M. C. Tsakiris.<br />
-
-The code can be downloaded <a href="https://www.dropbox.com/s/lrp3cntr130krp1/DPCP-NIPS18Toolbox.zip?dl=0" target=&ldquo;blank&rdquo;>here</a>; see the included readme file for a detailed description of the contents and for usage instructions.</p>
+<img src="pic/code/dpcp.png" alt="alt text" width="256px" height="166px" />&nbsp;</td>
+<td align="left"><p>This software package contains a collection of tools for the Dual Principal Component Pursuit (DPCP) method that robustly fits a subspace to data contaminated with outliers.</p>
+<p>For more information, see &ldquo;<a href="http://papers.nips.cc/paper/7486-dual-principal-component-pursuit-improved-analysis-and-efficient-algorithms.pdf">Dual Principal Component Pursuit: Improved Analysis and Efficient Algorithms</a>,&rdquo; by Z. Zhu, Y. Wang, D. P. Robinson, D. Naiman, R. Vidal, and M. C. Tsakiris.<br /></p>
+<p>The code can be downloaded <a href="https://www.dropbox.com/s/lrp3cntr130krp1/DPCP-NIPS18Toolbox.zip?dl=0">here</a>; see the included readme file for a detailed description of the contents and for usage instructions.</p>
 </td></tr></table>
-<p></p>
 <h2>Nonconvex Robust Low-rank Matrix Recovery</h2>
 <table class="imgtable"><tr><td>
-<img src="code/RMS.jpg" alt="alt text" width="513px" height="152px" />&nbsp;</td>
-<td align="left"><p>This software package contains a simple demo for SubGradient Method that is used to efficiently recover a low-rank matrix from a number of random linear measurements that are corrupted by outliers taking arbitrary values.
-
-For more information, see &ldquo;<a href="https://arxiv.org/abs/1809.09237" target=&rdquo;blank&ldquo;>Nonconvex Robust Low-rank Matrix Recovery</a>,&rdquo; by X. Li, Z. Zhu, A.M.-C. So, and R. Vidal.<br />
-
-The code can be downloaded <a href="https://www.dropbox.com/s/yrhgm62erzkg5hl/demo_RMS_subgradientMethod.m?dl=0" target=&ldquo;blank&rdquo;>here</a>.</p>
+<img src="pic/code/RMS.jpg" alt="alt text" width="513px" height="152px" />&nbsp;</td>
+<td align="left"><p>This software package contains a simple demo for SubGradient Method that is used to efficiently recover a low-rank matrix from a number of random linear measurements that are corrupted by outliers taking arbitrary values.</p>
+<p>For more information, see &ldquo;<a href="https://arxiv.org/abs/1809.09237">Nonconvex Robust Low-rank Matrix Recovery</a>,&rdquo; by X. Li, Z. Zhu, A.M.-C. So, and R. Vidal.<br /></p>
+<p>The code can be downloaded <a href="https://www.dropbox.com/s/yrhgm62erzkg5hl/demo_RMS_subgradientMethod.m?dl=0">here</a>.</p>
 </td></tr></table>
-<p></p>
 <h2>Symmetric Nonnegative Matrix Factorization</h2>
 <table class="imgtable"><tr><td>
-<img src="code/SNMF.jpg" alt="alt text" width="340px" height="150px" />&nbsp;</td>
-<td align="left"><p>This software package contains a collection of tools for solving Symmetric Nonnegative Matrix Factorization by efficient alternating minimization algorithms.
-
-For more information, see &ldquo;<a href="https://papers.nips.cc/paper/7762-dropping-symmetry-for-fast-symmetric-nonnegative-matrix-factorization.pdf" target=&rdquo;blank&ldquo;>Dropping Symmetry for Fast Symmetric Nonnegative Matrix Factorization</a>,&rdquo; by Z. Zhu, X. Li, K. Liu, and Q. Li.<br />
-
-The code can be downloaded <a href="https://www.dropbox.com/s/qpmv813nozgy70y/SNMFToolbox.zip?dl=0" target=&ldquo;blank&rdquo;>here</a>; see the included readme file for a detailed description of the contents and for usage instructions.</p>
+<img src="pic/code/SNMF.jpg" alt="alt text" width="340px" height="150px" />&nbsp;</td>
+<td align="left"><p>This software package contains a collection of tools for solving Symmetric Nonnegative Matrix Factorization by efficient alternating minimization algorithms.</p>
+<p>For more information, see &ldquo;<a href="https://papers.nips.cc/paper/7762-dropping-symmetry-for-fast-symmetric-nonnegative-matrix-factorization.pdf">Dropping Symmetry for Fast Symmetric Nonnegative Matrix Factorization</a>,&rdquo; by Z. Zhu, X. Li, K. Liu, and Q. Li.<br /></p>
+<p>The code can be downloaded <a href="https://www.dropbox.com/s/qpmv813nozgy70y/SNMFToolbox.zip?dl=0">here</a>; see the included readme file for a detailed description of the contents and for usage instructions.</p>
 </td></tr></table>
-<p></p>
 <h2>ROAST: Rapid Orthogonal Approximate Slepian Transform</h2>
 <table class="imgtable"><tr><td>
-<img src="code/ROAST.jpg" alt="alt text" width="256px" height="192px" />&nbsp;</td>
+<img src="pic/code/ROAST.jpg" alt="alt text" width="256px" height="192px" />&nbsp;</td>
 <td align="left"><p>This software package contains a collection of tools for fast contructing and implementing orthogonal projection for working with the Slepian basis, also known as discrete prolate spheroidal sequences. 
-For more information, see &ldquo;<a href="https://arxiv.org/abs/1712.04613" target=&rdquo;blank&ldquo;>ROAST: Rapid Orthogonal Approximate Slepian Transform</a>,&rdquo; by Z. Zhu, S. Karnik, M. B. Wakin, M. A. Davenport, and J. Romberg.<br />
-
-The code can be downloaded <a href="https://www.dropbox.com/s/ed3z7nmflesgrg4/ROASTToolbox.zip?dl=0" target=&ldquo;blank&rdquo;>here</a>; see the included readme file for a detailed description of the contents and for usage instructions.</p>
+For more information, see &ldquo;<a href="https://arxiv.org/abs/1712.04613">ROAST: Rapid Orthogonal Approximate Slepian Transform</a>,&rdquo; by Z. Zhu, S. Karnik, M. B. Wakin, M. A. Davenport, and J. Romberg.<br /></p>
+<p>The code can be downloaded <a href="https://www.dropbox.com/s/ed3z7nmflesgrg4/ROASTToolbox.zip?dl=0">here</a>; see the included readme file for a detailed description of the contents and for usage instructions.</p>
 </td></tr></table>
 <h2>Collaborative Compressive Sensing Systems</h2>
 <table class="imgtable"><tr><td>
-<img src="code/CollaborativeCS.jpg" alt="alt text" width="690px" height="170px" />&nbsp;</td>
-<td align="left"><p>This software package contains a collection of tools for learning a collaborative compressive sensing system from training data.
-
-For more information, see &ldquo;<a href="https://epubs.siam.org/doi/abs/10.1137/17M1148426" target=&rdquo;blank&ldquo;>‘On Collaborative Compressive Sensing Systems: The Framework, Design and Algorithm</a>,&rdquo; by Z. Zhu, G. Li, J. Ding. Q. Li, and X. He.<br />
-
-The code can be downloaded <a href="https://www.dropbox.com/s/3otr8h7b3rjl7xr/OptimizedCCSToolbox.zip?dl=0" target=&ldquo;blank&rdquo;>here</a>; see the included readme file for a detailed description of the contents and for usage instructions.</p>
+<img src="pic/code/CollaborativeCS.jpg" alt="alt text" width="690px" height="170px" />&nbsp;</td>
+<td align="left"><p>This software package contains a collection of tools for learning a collaborative compressive sensing system from training data.</p>
+<p>For more information, see &ldquo;<a href="https://epubs.siam.org/doi/abs/10.1137/17M1148426">‘On Collaborative Compressive Sensing Systems: The Framework, Design and Algorithm</a>,&rdquo; by Z. Zhu, G. Li, J. Ding. Q. Li, and X. He.<br /></p>
+<p>The code can be downloaded <a href="https://www.dropbox.com/s/3otr8h7b3rjl7xr/OptimizedCCSToolbox.zip?dl=0">here</a>; see the included readme file for a detailed description of the contents and for usage instructions.</p>
 </td></tr></table>
-<p>
-</p>
 <h2>Fast Slepian Transform</h2>
 <table class="imgtable"><tr><td>
-<img src="code/FAST.png" alt="alt text" width="256px" height="192px" />&nbsp;</td>
+<img src="pic/code/FAST.png" alt="alt text" width="256px" height="192px" />&nbsp;</td>
 <td align="left"><p>This software package contains a collection of tools for implementing fast alorithms for working with the Slepian basis, also known as discrete prolate spheroidal sequences. 
-For more information, see &ldquo;<a href="https://arxiv.org/abs/1611.04950" target=&rdquo;blank&ldquo;>The Fast Slepian Transform</a>,&rdquo; by S. Karnik, Z. Zhu, M. B. Wakin, J. Romberg, and M. A. Davenport.<br />
-
-The code can be downloaded <a href="https://www.dropbox.com/s/rqqu779zea30wv7/FastSlepianTransformToolbox.zip?dl=0" target=&ldquo;blank&rdquo;>here</a>; see the included readme file for a detailed description of the contents and for usage instructions.</p>
+For more information, see &ldquo;<a href="https://arxiv.org/abs/1611.04950">The Fast Slepian Transform</a>,&rdquo; by S. Karnik, Z. Zhu, M. B. Wakin, J. Romberg, and M. A. Davenport.<br /></p>
+<p>The code can be downloaded <a href="https://www.dropbox.com/s/rqqu779zea30wv7/FastSlepianTransformToolbox.zip?dl=0">here</a>; see the included readme file for a detailed description of the contents and for usage instructions.</p>
 </td></tr></table>
-<p></p>
 <h2>Circulant Approximation </h2>
 <table class="imgtable"><tr><td>
-<img src="code/Circulant.png" alt="alt text" width="274px" height="165px" />&nbsp;</td>
+<img src="pic/code/Circulant.png" alt="alt text" width="274px" height="165px" />&nbsp;</td>
 <td align="left"><p>This software package contains a simple demo for the asymptotic equivalence of the circulant and Toeplitz matrices 
 in terms of individual eigenvalues.
-For more information, see &ldquo;<a href="https://arxiv.org/abs/1608.04820" target=&rdquo;blank&ldquo;>On the Asymptotic Equivalence of Circulant and Toeplitz Matrices</a>,&rdquo; by Z. Zhu and M. B. Wakin.<br />
-
-The code can be downloaded <a href="https://www.dropbox.com/s/ez9dpj7wn3e85ad/demo_discontinuousFunc.m?dl=0" target=&ldquo;blank&rdquo;>here</a>.</p>
+For more information, see &ldquo;<a href="https://arxiv.org/abs/1608.04820">On the Asymptotic Equivalence of Circulant and Toeplitz Matrices</a>,&rdquo; by Z. Zhu and M. B. Wakin.<br /></p>
+<p>The code can be downloaded <a href="https://www.dropbox.com/s/ez9dpj7wn3e85ad/demo_discontinuousFunc.m?dl=0">here</a>.</p>
 </td></tr></table>
-<p></p>
 <h2>Optimized Sparse Sensing Matrix</h2>
 <table class="imgtable"><tr><td>
-<img src="code/SparseSensing.png" alt="alt text" width="256px" height="192px" />&nbsp;</td>
+<img src="pic/code/SparseSensing.png" alt="alt text" width="256px" height="192px" />&nbsp;</td>
 <td align="left"><p>This software package contains a collection of tools for desinging a sparse sensing matrix for compressive sensing systems. 
-For more information, see &ldquo;<a href="https://arxiv.org/abs/1709.06895/" target=&rdquo;blank&ldquo;>Optimized Sparse Projections for Compressive Sensing</a>,&rdquo; by T. Hong,  X. Li, Z. Zhu, and Q. Li.<br />
-
-The code can be downloaded <a href="https://www.dropbox.com/s/g3drorix9lmhuj4/OptimizedSparseSensingToolbox.zip?dl=0" target=&ldquo;blank&rdquo;>here</a>; see the included readme file for a detailed description of the contents and for usage instructions.</p>
+For more information, see &ldquo;<a href="https://arxiv.org/abs/1709.06895/">Optimized Sparse Projections for Compressive Sensing</a>,&rdquo; by T. Hong,  X. Li, Z. Zhu, and Q. Li.<br /></p>
+<p>The code can be downloaded <a href="https://www.dropbox.com/s/g3drorix9lmhuj4/OptimizedSparseSensingToolbox.zip?dl=0">here</a>; see the included readme file for a detailed description of the contents and for usage instructions.</p>
 </td></tr></table>
 <h2>Optimized Sensing Matrix</h2>
 <table class="imgtable"><tr><td>
-<img src="code/OptimizedSensing.png" alt="alt text" width="245px" height="202px" />&nbsp;</td>
+<img src="pic/code/OptimizedSensing.png" alt="alt text" width="245px" height="202px" />&nbsp;</td>
 <td align="left"><p>This software package contains a collection of tools for desinging the sensing matrix by minimizing the mutual coherence of the compressive sensing system. 
-For more information, see &ldquo;<a href="http://ieeexplore.ieee.org/document/6484193/" target=&rdquo;blank&ldquo;>On Projection Matrix Optimization for Compressive Sensing Systems</a>,&rdquo; by G. Li,  Z. Zhu, D. Yang, L. Chang, and H. Bai.<br />
-
-The code can be downloaded <a href="https://www.dropbox.com/s/wh8go78thodvows/OptimizedSensingToolbox.zip?dl=0" target=&ldquo;blank&rdquo;>here</a>; see the included readme file for a detailed description of the contents and for usage instructions.</p>
+For more information, see &ldquo;<a href="http://ieeexplore.ieee.org/document/6484193/">On Projection Matrix Optimization for Compressive Sensing Systems</a>,&rdquo; by G. Li,  Z. Zhu, D. Yang, L. Chang, and H. Bai.<br /></p>
+<p>The code can be downloaded <a href="https://www.dropbox.com/s/wh8go78thodvows/OptimizedSensingToolbox.zip?dl=0">here</a>; see the included readme file for a detailed description of the contents and for usage instructions.</p>
 </td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-04-24 19:41:33 MDT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-09-03 15:40:00 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
