--- a/Talks.html
+++ b/Talks.html
@@ -18,31 +18,34 @@
 <div class="menu-item"><a href="People.html">People</a></div>
 <div class="menu-item"><a href="Talks.html" class="current">Talks</a></div>
 <div class="menu-item"><a href="Software.html">Software</a></div>
-<div class="menu-item"><a href="Openings.html">Openings</a></div>
 <div class="menu-item"><a href="zhuCV.pdf">CV</a></div>
 </td>
 <td id="layout-content">
-<p>
-<tt> </tt> 
-</p>
+<p><tt> </tt> </p>
 <h1>Selected Research Talks</h1>
-<p></p>
 <ul>
-<li><p><a href="https://www.dropbox.com/s/fnxebrpn2vtwpgp/neural-collapse-SlowDNN-2021.pdf?dl=0" target=&ldquo;blank&rdquo;>Geometric Analysis of Neural Collapse with Unconstrained Features</a>, <a href="https://sites.google.com/view/slowdnn2021/" target=&ldquo;blank&rdquo;>The 2nd Workshop on Seeking Low-dimensionality in Deep Neural Networks (SLowDNN)</a>, November, 2021.
-</p>
+<li><p><a href="https://buckeyemailosu-my.sharepoint.com/:b:/g/personal/zhu_3440_osu_edu/ERB2rLyZXodHmzxeaXHmIHEBJ8iYiDn-n0lG7UKwAuOxHQ?e=Sde06g">Low-dimensional Modeling for Deep Learning</a>, <a href="https://r5.ieee.org/denver-cs/honors/">IEEE Denver Computer, Information Theory, and Robotics Society</a>, June, 2022.</p>
 </li>
-<li><p><a href="https://www.dropbox.com/s/lsvxde2msteh9mx/Robust_recovery.pdf?dl=0" target=&ldquo;blank&rdquo;>Robust Recovery with Over-parameterized Model</a>, Microsoft Research Day, Microsoft, March, 2021.
-</p>
+</ul>
+<ul>
+<li><p><a href="https://www.dropbox.com/s/fnxebrpn2vtwpgp/neural-collapse-SlowDNN-2021.pdf?dl=0">Geometric Analysis of Neural Collapse with Unconstrained Features</a>, <a href="https://sites.google.com/view/slowdnn2021/">The 2nd Workshop on Seeking Low-dimensionality in Deep Neural Networks (SLowDNN)</a>, November, 2021.</p>
 </li>
-<li><p><a href="https://www.dropbox.com/s/2yqqgydb6v0pm1e/NonconvexNonsmooth-CUBoulder-Jan21.pdf?dl=0" target=&ldquo;blank&rdquo;>Provable Nonsmooth Nonconvex Approaches for Low-Dimensional Models</a>, <a href="https://sites.google.com/colorado.edu/statoptml/" target=&ldquo;blank&rdquo;>Statistics, Optimization and Machine Learning Seminar</a>, University of Colorado Boulder, January, 2020.
-</p>
+</ul>
+<ul>
+<li><p><a href="https://www.dropbox.com/s/lsvxde2msteh9mx/Robust_recovery.pdf?dl=0">Robust Recovery with Over-parameterized Model</a>, Microsoft Research Day, Microsoft, March, 2021.</p>
 </li>
-<li><p><a href="https://www.dropbox.com/s/s6cbprhtclzbzy2/LARM-Sep19-Zhu.pdf?dl=0" target=&ldquo;blank&rdquo;>Provable Nonconvex Approaches for Low-rank Models</a>, invited speaker at <a href="https://sites.google.com/site/lowrankmodels/" target=&ldquo;blank&rdquo;>Workshop on Low-Rank Models and Applications (LRMA)</a>, University of Mons, Belgium, Sep 12 – 13, 2019.</p>
+</ul>
+<ul>
+<li><p><a href="https://www.dropbox.com/s/2yqqgydb6v0pm1e/NonconvexNonsmooth-CUBoulder-Jan21.pdf?dl=0">Provable Nonsmooth Nonconvex Approaches for Low-Dimensional Models</a>, <a href="https://sites.google.com/colorado.edu/statoptml/">Statistics, Optimization and Machine Learning Seminar</a>, University of Colorado Boulder, January, 2020.</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://www.dropbox.com/s/s6cbprhtclzbzy2/LARM-Sep19-Zhu.pdf?dl=0">Provable Nonconvex Approaches for Low-rank Models</a>, invited speaker at <a href="https://sites.google.com/site/lowrankmodels/">Workshop on Low-Rank Models and Applications (LRMA)</a>, University of Mons, Belgium, Sep 12 – 13, 2019.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-15 08:56:39 MST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-09-03 16:19:36 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
