--- a/Teaching.html
+++ b/Teaching.html
@@ -18,47 +18,42 @@
 <div class="menu-item"><a href="People.html">People</a></div>
 <div class="menu-item"><a href="Talks.html">Talks</a></div>
 <div class="menu-item"><a href="Software.html">Software</a></div>
-<div class="menu-item"><a href="Openings.html">Openings</a></div>
 <div class="menu-item"><a href="zhuCV.pdf">CV</a></div>
 </td>
 <td id="layout-content">
-<p>
-<tt> </tt> 
-</p>
+<p><tt> </tt> </p>
 <h1>Teaching</h1>
+<h2>Ohio State University</h2>
+<ul>
+<li><p>Autumn 22: <a href="https://sites.google.com/view/osu-cse-5523-au22-zhu">Machine Learning (CSE 5523)</a></p>
+</li>
+</ul>
 <h2>University of Denver</h2>
-<p></p>
 <ul>
 <li><p>Autumn 21:  Advanced Optimization (ENGR 4622)</p>
 </li>
-<li><p>Winter 20/21: Probability and Statistics for Engineers (ENGR 3650)</p>
+<li><p>Winter 20/21/22: Probability and Statistics for Engineers (ENGR 3650)</p>
 </li>
-<li><p>Spring 20/21: (Advanced) Machine Learning (ENCE 3630/4630)</p>
+<li><p>Spring 20/21/22: (Advanced) Machine Learning (ENCE 3630/4630)</p>
 </li>
-<li><p>Autumn 20:  Large-Scale Optimization (ENGR 4620)
-</p>
+<li><p>Autumn 20:  Large-Scale Optimization (ENGR 4620)</p>
 </li>
 </ul>
 <h2>Colorado School of Mines</h2>
-<p></p>
 <ul>
 <li><p>Spring 2014: Lab instructor for Digital Logic (EENG 284)</p>
 </li>
-<li><p>Fall 2013: Lab instructor for Digital Logic (EENG 284)
-</p>
+<li><p>Fall 2013: Lab instructor for Digital Logic (EENG 284)</p>
 </li>
 </ul>
 <h2>Zhejiang University of Technology</h2>
-<p></p>
 <ul>
-<li><p>Fall 2012: Teaching assistant for Signals and Systems
-
-</p>
+<li><p>Fall 2012: Teaching assistant for Signals and Systems</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-17 09:12:27 MDT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-09-03 16:12:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
