--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@ Email: zhu.3440@osu.edu</p>
 </ul>
 <h2>News:</h2>
 <ul>
+<li><p>[May 2022] On May 26-27, together with <a href="https://sites.google.com/view/jsulam/about">Jere's group</a>, we had our annual Deep & Sparse Team meeting at University of Denver to discuss project accomplishments and plans.</p>
+</li>
+</ul>
+<ul>
 <li><p>[May 2022] Gave a 10-hours short course (with Sam Buchanan, Yi Ma, Qing Qu, John Wright, and Yuqian Zhang) on &lsquo;&lsquo;<a href="https://highdimdata-lowdimmodels-tutorial.github.io/">Low-Dimensional Models for High-Dimensional Data: From Linear to Nonlinear, Convex to Nonconvex, and Shallow to Deep</a>" at  IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP).</p>
 </li>
 </ul>
@@ -170,7 +174,7 @@ Email: zhu.3440@osu.edu</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-03 16:43:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-03 16:57:27 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
