--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Email: zhu.3440@osu.edu</p>
 </td></tr></table>
 <p><br /></p>
 <p><b>I am looking for self-motivated students who are interested in  data science, machine learning, and signal processing.</b>	If you are interested in joining my lab, please send me your CV, transcripts, and any other demonstration materials.<br /> </p>
-<p>Our research focuses on theoretical and computational aspects of data science and machine learning. In particular, we are interested in developing computational methods that can efficiently and reliably extract meaningful representations from large-scale and high-dimensional data in applications including biomedical engineering, computational imaging, quantum information, geophysics and remote sensing, etc.  A few current projects include </p>
+<p>Our group works on theoretical and computational aspects of data science and machine learning, with a focus on developing efficient methods for extracting useful information from large-scale and high-dimensional data, proving their correctness, and applying them to solving real-world problems. A few current projects include </p>
 <ul>
 <li><p><b>Machine learning</b>: representation learning; generalization properties and implicit regularization; model (neural network) compression; deep neural networks for unsupervised learning and inverse problems;</p>
 </li>
@@ -49,7 +49,11 @@ Email: zhu.3440@osu.edu</p>
 </ul>
 <h2>News:</h2>
 <ul>
-<li><p>[May 2022] On May 26-27, together with <a href="https://sites.google.com/view/jsulam/about">Jere's group</a>, we had our annual Deep & Sparse Team meeting at University of Denver to discuss project accomplishments and plans.</p>
+<li><p>[August 2022] Our group joined the Department of Computer Science and Engineering at The Ohio State University.</p>
+</li>
+</ul>
+<ul>
+<li><p>[May 2022] On May 26-27, together with <a href="https://sites.google.com/view/jsulam/about">Jere's group</a>, we had our annual Deep & Sparse Team meeting at the University of Denver to discuss project accomplishments and plans.</p>
 </li>
 </ul>
 <ul>
@@ -174,7 +178,7 @@ Email: zhu.3440@osu.edu</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-03 16:57:27 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-03 17:23:08 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
